Changed responsive font-size from 0.8 rem to 1rem. Changed input type button width from 45% to 40vw. Changed input type text field width from 50% to 50vw. Changed jumbotron image properties to the following: - Gave them a linear-gradient effect - Width of 100vw - Height of 80vh - Display flex - justify-content center - Align items center - bg-size cover - bg position center center - bg repeat no repeat - bg attachment fixed

--- a/src/App.css
+++ b/src/App.css
@@ -5,27 +5,45 @@
 }
 
 .music-jumbotron {
-  background-image: url(./components/images/music-jumbotron.jpg);
-  background-size: 100% 100%;
-  margin: auto;
-  height: 75vh;
-  padding-top: 10vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(./components/images/music-jumbotron.jpg);
+  width: 100vw;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .sports-jumbotron {
-  background-image: url(./components/images/sports-jumbotron.jpg);
-  background-size: 100% 100%;
-  margin: auto;
-  height: 75vh;
-  padding-top: 10vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(./components/images/sports-jumbotron.jpg);
+  width: 100vw;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .theater-jumbotron {
-  background-image: url(./components/images/theater-jumbotron.jpg);
-  background-size: 100% 100%;
-  margin: auto;
-  height: 75vh;
-  padding-top: 10vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(./components/images/theater-jumbotron.jpg);
+  width: 100vw;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 /* Global Styles */
@@ -343,7 +361,7 @@ input[type='date'],
 select,
 textarea {
   display: block;
-  width: 50%;
+  width: 50vw;
   padding: 0.4rem;
   font-size: 1.2rem;
   border: 2px solid white;
@@ -361,7 +379,7 @@ textarea {
 input[type='submit'],
 button {
   font: inherit;
-  width: 45%;
+  width: 40vw;
   margin: auto;
   border-radius: 0 0 10px 10px;
 }
@@ -409,8 +427,7 @@ table th {
 @media (max-width: 700px) {
   input[type='text'],
   input[type='submit'] {
-    font-size: 0.8rem;
-    padding: 0;
+    font-size: 1rem;
   }
 
   .hide-sm {
